--- a/WebL1/styles.css
+++ b/WebL1/styles.css
@@ -5,10 +5,11 @@
 
 body {
     display: grid;
-    grid-template-columns: 2% 1fr 1fr 2%;
+    grid-template-columns: 2% 3fr 2fr 1fr 2%;
     grid-template-rows: 20vh 70vh 10vh;
     background-image: linear-gradient(rgb(144, 0, 255), rgb(255, 0, 192),
             rgb(255, 0, 0));
+
 
 }
 
@@ -16,10 +17,26 @@ nav a {
     color: white;
     font-size: 40px;
     font-family: "MarketDeco";
+    font-style: italic;
+    text-decoration: none;
+    word-spacing: 10px;
 
 }
 
 nav {
     grid-column: 2/3;
     grid-row: 1/2;
+}
+
+
+.logo {
+    grid-column: 4/5;
+    grid-row: 1/2;
+    margin-top: 10px;
+}
+section {
+    box-shadow: -8px 3px 25px 1px rgba(0, 0, 0, 0.75);
+    background-color: rgba(255, 0, 255, 0);
+    grid-column: 2/5;
+    grid-row: 2/3;
 }
