--- a/WebL1/styles.css
+++ b/WebL1/styles.css
@@ -34,9 +34,23 @@ nav {
     grid-row: 1/2;
     margin-top: 10px;
 }
+
 section {
     box-shadow: -8px 3px 25px 1px rgba(0, 0, 0, 0.75);
     background-color: rgba(255, 0, 255, 0);
     grid-column: 2/5;
     grid-row: 2/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.images {
+    width: 80%;
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+section h1 {
+    
 }
