--- a/WebL1/styles.css
+++ b/WebL1/styles.css
@@ -6,7 +6,7 @@
 body {
     display: grid;
     grid-template-columns: 2% 3fr 2fr 1fr 2%;
-    grid-template-rows: 20vh 70vh 10vh;
+    grid-template-rows: 15vh 80vh 5vh;
     background-image: linear-gradient(rgb(144, 0, 255), rgb(255, 0, 192),
             rgb(255, 0, 0));
 
@@ -47,10 +47,27 @@ section {
 
 .images {
     width: 80%;
-    grid-column: 1/2;
+    grid-column: 3/4;
     grid-row: 2/3;
+    margin-top: 10%;
 }
 
-section h1 {
-    
+.description p {
+    font-family: cursive;
+    font-style: italic;
+    width: 70%;
+    font-size: 2vmax;
+}
+
+.description h1 {
+    font-family: "MarketDeco";
+    font-style: italic;
+    width: 70%;
+    font-size: 2.5vmax;
+}
+
+.description {
+    grid-column: 4/5;
+    grid-row: 2/3;
+    margin-left: 20%;
 }
