--- a/WebL1/styles.css
+++ b/WebL1/styles.css
@@ -35,6 +35,7 @@ nav {
     grid-column: 4/5;
     grid-row: 1/2;
     margin-top: 10px;
+    height: 35px;
 }
 
 section {
@@ -85,4 +86,19 @@ nav a:hover {
 
 .contact {
     margin-left: 5%;
+    grid-column: 1/3;
+}
+
+.products {
+    grid-column: 1/3;
+    grid-row: 1/3;
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.pad {
+    width: 30%;
+    margin-left: 40px;
 }
