--- a/WebL1/styles.css
+++ b/WebL1/styles.css
@@ -1,9 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@1,300&display=swap');
+
 @font-face {
     font-family: "MarketDeco";
     src: url(Fonts/MarketDeco.ttf)
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@1,300&display=swap');
 
 body {
     display: grid;
@@ -45,14 +45,15 @@ section {
     grid-row: 2/3;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    min-height: 85vh;
 }
 
 .images {
     width: 100%;
+    margin-left: 10%;
+    margin-top: 10%;
     grid-column: 3/4;
     grid-row: 2/3;
-    margin-top: 10%;
-    margin-left: 10%;
 }
 
 .description p {
@@ -103,14 +104,23 @@ li {
     text-align: center;
 }
 
-li img {
+li .pro {
     display: block;
     width: 60%;
     margin: 10px auto;
+    margin-bottom: 10px;
 
 }
 
 .small {
 
     width: 40%;
+}
+
+.next {
+    justify-self: center;
+    grid-column: 3/4;
+    height: 20%;
+    margin-top: 5%;
+    margin-left: 10px;
 }
